# gargantuas-raylib-template

./: CMakeLists.txt  README.md
lib/flecs/: CMakeLists.txt
lib/inih/: ini.c  ini.h
src/: main.c  rktest.c
